--- a/artiexh-authorization-client/pom.xml
+++ b/artiexh-authorization-client/pom.xml
@@ -3,18 +3,24 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.artiexh</groupId>
         <artifactId>artiexh-backend</artifactId>
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>atriexh-api</artifactId>
+    <artifactId>artiexh-authorization-client</artifactId>
     <version>1.0.0</version>
-    <name>artiexh-api</name>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
@@ -25,16 +31,12 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
             <groupId>com.artiexh</groupId>
@@ -43,13 +45,14 @@
         </dependency>
         <dependency>
             <groupId>com.artiexh</groupId>
-            <artifactId>lib_artiexh-model</artifactId>
+            <artifactId>lib_artiexh-auth</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.artiexh</groupId>
-            <artifactId>lib_artiexh-auth</artifactId>
+            <artifactId>lib_artiexh-model</artifactId>
             <version>1.0.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -94,6 +97,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
