--- a/lib_artiexh-auth/pom.xml
+++ b/lib_artiexh-auth/pom.xml
@@ -30,6 +30,14 @@
             <artifactId>java-jwt</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.artiexh</groupId>
             <artifactId>lib_artiexh-model</artifactId>
             <version>1.0.0</version>
