--- a/atriexh-api/src/main/resources/application.yml
+++ b/atriexh-api/src/main/resources/application.yml
@@ -36,7 +36,7 @@ server:
 springdoc:
   show-actuator: true
   swagger-ui:
-    path: /swagger
+    path: /swagger-ui
     disable-swagger-default-url: true
     csrf:
       enabled: true
