--- a/atriexh-api/src/main/resources/application.yml
+++ b/atriexh-api/src/main/resources/application.yml
@@ -2,11 +2,10 @@ spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://localhost:3306/artiexh_backend
-    username: artiexh-backend
-    password: artiexh@123
-    type: io.agroal.springframework.boot.AgroalDataSource
-    agroal:
+    url: jdbc:mariadb://${DB_URL}/artiexh_backend
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    hikari:
       auto-commit: false
   jpa:
     open-in-view: false
@@ -15,9 +14,9 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
   data:
     redis:
-      host: "localhost"
-      port: 6379
-      password: artiexh@123
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      password: ${REDIS_PASSWORD}
   jackson:
     serialization:
       write-dates-as-timestamps: true
@@ -43,7 +42,7 @@ springdoc:
 artiexh:
   security:
     jwt:
-      secret-key: artiexh@123
+      secret-key: ${JWT_SECRET_KEY}
       issuer: http://artiexh.com/api/
       audiences:
         - http://artiexh.com/
