--- a/atriexh-api/src/main/resources/application.yml
+++ b/atriexh-api/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://${DB_URL}/artiexh_backend
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mariadb://${DB_URL:localhost:3306}/artiexh_backend
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:013845}
     hikari:
       auto-commit: false
   jpa:
@@ -12,10 +12,14 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDB103Dialect
   data:
     redis:
-      host: ${REDIS_HOST}
-      port: ${REDIS_PORT}
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
       password: ${REDIS_PASSWORD}
   jackson:
     serialization:
