--- a/atriexh-api/src/main/resources/application.yml
+++ b/atriexh-api/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://${DB_URL:localhost:3306}/artiexh_backend
-    username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:013845}
+    url: jdbc:mariadb://${DB_URL:}/artiexh_backend
+    username: ${DB_USERNAME:}
+    password: ${DB_PASSWORD:}
     hikari:
       auto-commit: false
   jpa:
@@ -18,8 +18,8 @@ spring:
         dialect: org.hibernate.dialect.MariaDB103Dialect
   data:
     redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
+      host: ${REDIS_HOST:}
+      port: ${REDIS_PORT:}
       password: ${REDIS_PASSWORD}
   jackson:
     serialization:
@@ -52,4 +52,4 @@ artiexh:
         - http://artiexh.com/
         - http://localhost:8080/
     recent_oauth2_fail_id:
-      expiration: ${CACHE_RECENT_OAUTH2_FAIL_ID_EXPIRE:5}
+      expiration: ${CACHE_RECENT_OAUTH2_FAIL_ID_EXPIRE:}
