--- a/atriexh-api/src/main/resources/application.yml
+++ b/atriexh-api/src/main/resources/application.yml
@@ -12,10 +12,9 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MariaDB103Dialect
+        dialect: org.hibernate.dialect.MariaDBDialect
   data:
     redis:
       host: ${REDIS_HOST:}
