--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<springdoc.version>2.1.0</springdoc.version>
 		<io.hypersistence.version>3.3.2</io.hypersistence.version>
 		<java-jwt.version>4.4.0</java-jwt.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
 	</properties>
 
 	<dependencyManagement>
@@ -92,6 +93,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
 		</dependency>
 	</dependencies>
 
