--- a/atriexh-api/pom.xml
+++ b/atriexh-api/pom.xml
@@ -20,7 +20,14 @@
 			<artifactId>lib_atriexh-api-base</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.javamoney</groupId>
+			<artifactId>moneta</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
