--- a/atriexh-api/src/main/resources/application.yml
+++ b/atriexh-api/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://${DB_URL}/artiexh_backend
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mariadb://${DB_URL:}/artiexh_backend
+    username: ${DB_USERNAME:}
+    password: ${DB_PASSWORD:}
     hikari:
       auto-commit: false
   jpa:
@@ -12,10 +12,13 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
   data:
     redis:
-      host: ${REDIS_HOST}
-      port: ${REDIS_PORT}
+      host: ${REDIS_HOST:}
+      port: ${REDIS_PORT:}
       password: ${REDIS_PASSWORD}
   jackson:
     serialization:
@@ -32,7 +35,6 @@ server:
     include-stacktrace: never
     whitelabel:
       enabled: false
-  port: 8082
 springdoc:
   show-actuator: true
   swagger-ui:
@@ -49,4 +51,4 @@ artiexh:
         - http://artiexh.com/
         - http://localhost:8080/
     recent_oauth2_fail_id:
-      expiration: ${CACHE_RECENT_OAUTH2_FAIL_ID_EXPIRE}
+      expiration: ${CACHE_RECENT_OAUTH2_FAIL_ID_EXPIRE:}
