--- a/lib_artiexh-model/pom.xml
+++ b/lib_artiexh-model/pom.xml
@@ -32,6 +32,10 @@
 			<version>1.0.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
