--- a/artiexh-api/pom.xml
+++ b/artiexh-api/pom.xml
@@ -10,7 +10,7 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<artifactId>atriexh-api</artifactId>
+	<artifactId>artiexh-api</artifactId>
 	<version>1.0.0</version>
 	<name>artiexh-api</name>
 
