--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
   application:
     name: artiexh-api
@@ -16,11 +17,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
+    show-sql: true
   data:
     redis:
       host: ${REDIS_HOST:}
       port: ${REDIS_PORT:}
-      password: ${REDIS_PASSWORD}
+#      password: ${REDIS_PASSWORD}
   jackson:
     default-property-inclusion: non_null
   main:
