--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: artiexh-api
@@ -22,7 +21,7 @@ spring:
     redis:
       host: ${REDIS_HOST:}
       port: ${REDIS_PORT:}
-#      password: ${REDIS_PASSWORD}
+      password: ${REDIS_PASSWORD}
   jackson:
     default-property-inclusion: non_null
   main:
