--- a/lib_artiexh-model/pom.xml
+++ b/lib_artiexh-model/pom.xml
@@ -33,6 +33,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.artiexh</groupId>
+			<artifactId>lib_artiexh-elasticsearch-repository</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		</dependency>
