--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
       host: ${REDIS_HOST:}
       port: ${REDIS_PORT:}
       password: ${REDIS_PASSWORD}
+  elasticsearch:
+    uris: ${ELASTICSEARCH_URIS:}
+    username: ${ELASTICSEARCH_USERNAME:}
+    password: ${ELASTICSEARCH_PASSWORD:}
   jackson:
     default-property-inclusion: non_null
   main:
