remove printer-provider role

--- a/artiexh-authorization-client/src/main/resources/application.yml
+++ b/artiexh-authorization-client/src/main/resources/application.yml
@@ -39,7 +39,7 @@ server:
     include-stacktrace: never
     whitelabel:
       enabled: false
-  port: ${AUTH_SERVER_PORT}
+  port: ${AUTH_SERVER_PORT:}
 springdoc:
   show-actuator: true
   swagger-ui:
