--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+      ddl-auto: update
 
     properties:
       hibernate:
