--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -13,10 +13,10 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
       ddl-auto: update
-
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
+    show-sql: true
   data:
     redis:
       host: ${REDIS_HOST:}
