--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Setup AWS credential
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{secrets.key-id}}
-          aws-secret-access-key: ${{secrets.access-key}}
+          aws-access-key-id: ${{secrets.KEY_ID}}
+          aws-secret-access-key: ${{secrets.ACCESS_KEY}}
           aws-region: ap-southeast-1
       - name: Setup Java JDK
         uses: actions/setup-java@v3.12.0
