--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,14 +16,14 @@ jobs:
           aws-region: ap-southeast-1
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@1.1.3
+        uses: aws-actions/amazon-ecs-render-task-definition@v1.1.3
         with:
           task-definition: dev-artiexh-api
           container-name: dev-artiexh-api
           image: public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
 
       - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@1.4.11
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1.4.11
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: dev-artiexh-api
