--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Setup AWS credential
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{secrets.key-id}}
-          aws-secret-access-key: ${{secrets.access-key}}
+          aws-access-key-id: ${{secrets.KEY_ID}}
+          aws-secret-access-key: ${{secrets.ACCESS_KEY}}
           aws-region: ap-southeast-1
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
