--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,9 +18,9 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1.1.3
         with:
-          task-definition: dev-artiexh-api
+          task-definition: .aws/artiexh-api-task-definition.json
           container-name: dev-artiexh-api
-          image: public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
+          image: public.ecr.aws/n8l9j6q1/artiexh-api:82223bc144bf5d9050d3d15acf337e2c7a67a948
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1.4.11
