--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,8 +1,9 @@
+
 spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://${DB_URL:}/artiexh_backend
+    url: jdbc:mariadb://${DB_URL:}/${DB_NAME}
     username: ${DB_USERNAME:}
     password: ${DB_PASSWORD:}
     hikari:
@@ -12,6 +13,7 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
