Fix/tag query (#34)
* Fix cart item id and update categpry thumnail

* Update tag query

* Update multiple query tag

--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://${DB_URL:}/artiexh_backend
+    url: jdbc:mariadb://${DB_URL:}/${DB_NAME:}
     username: ${DB_USERNAME:}
     password: ${DB_PASSWORD:}
     hikari:
