--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   application:
     name: artiexh-api
   datasource:
-    url: jdbc:mariadb://${DB_URL:}/${DB_NAME}
+    url: jdbc:mariadb://${DB_URL:}/${DB_NAME:}
     username: ${DB_USERNAME:}
     password: ${DB_PASSWORD:}
     hikari:
