--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
-  push:
-    branches: [ "develop" ]
+  pull_request:
+    branches: [ "main" ]
   workflow_dispatch:
 jobs:
   build:
