--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,6 +35,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup AWS credential
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{secrets.KEY_ID}}
+          aws-secret-access-key: ${{secrets.ACCESS_KEY}}
+          aws-region: ap-southeast-1
       - name: Fill new image ID ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1.1.3
