Update api download file

--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -59,7 +59,7 @@ artiexh:
     access-key: AKIAWENKWA7DH7EBQPBN
     secret-key: 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
     region: ap-southeast-1
-    bucket: prn221
+    bucket: artiexh
   security:
     admin:
       id: ${ADMIN_ID}
