--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,13 +8,40 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Setup Java JDK
+        uses: actions/setup-java@v3.12.0
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+          cache: 'maven'
+      - name: Build maven
+        run: mvn -B install
+      - name: Build docker image
+        run: mvn -B -pl artiexh-api spring-boot:build-image
       - name: Setup AWS credential
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{secrets.KEY_ID}}
           aws-secret-access-key: ${{secrets.ACCESS_KEY}}
           aws-region: ap-southeast-1
-      - name: Fill in the new image ID in the Amazon ECS task definition
+      - name: Login aws ecr
+        run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/n8l9j6q1
+      - name: Publish docker image
+        run: |
+          docker tag artiexh-api:1.0.0 public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
+          docker push public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup AWS credential
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{secrets.KEY_ID}}
+          aws-secret-access-key: ${{secrets.ACCESS_KEY}}
+          aws-region: ap-southeast-1
+      - name: Fill new image ID ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1.1.3
         with:
@@ -22,7 +49,7 @@ jobs:
           container-name: artiexh-api
           image: public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
 
-      - name: Deploy Amazon ECS task definition
+      - name: Deploy ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1.4.11
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
