--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,13 @@
 name: CI
 on:
-  push:
-    branches: [ "develop" ]
+  pull_request:
+    branches: [ "develop", "main" ]
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup AWS credential
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{secrets.KEY_ID}}
-          aws-secret-access-key: ${{secrets.ACCESS_KEY}}
-          aws-region: ap-southeast-1
       - name: Setup Java JDK
         uses: actions/setup-java@v3.12.0
         with:
@@ -22,13 +16,5 @@ jobs:
           cache: 'maven'
       - name: Build maven
         run: mvn -B install
-      - name: Build docker image
-        run: mvn -B -pl artiexh-api spring-boot:build-image
-      - name: Login aws ecr
-        run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/n8l9j6q1
-      - name: Publish docker image
-        run: |
-          docker tag artiexh-api:1.0.0 public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
-          docker push public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
           
           
