--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: artiexh-api
@@ -8,6 +7,8 @@ spring:
     password: ${DB_PASSWORD:}
     hikari:
       auto-commit: false
+      maximum-pool-size: ${DB_HIKARI_MAX_POOL:3}
+      minimum-idle: ${DB_HIKARI_MIN_POOL:1}
   jpa:
     open-in-view: false
     hibernate:
