--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   application:
     name: artiexh-api
   datasource:
@@ -57,6 +61,13 @@ springdoc:
     csrf:
       enabled: true
 artiexh:
+  aws:
+    s3:
+      public-bucket-name: ${PUBLIC_BUCKET_NAME:}
+      private-bucket-name: ${PRIVATE_BUCKET_NAME:}
+      access-key: ${ACCESS_KEY:}
+      secret-key: ${SECRET_KEY:}
+      region: ${REGION:}
   security:
     admin:
       id: ${ADMIN_ID}
