Update response id and sort api

--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -60,6 +60,9 @@ springdoc:
     disable-swagger-default-url: true
     csrf:
       enabled: true
+    operations-sorter: alpha
+    tags-sorter: alpha
+  writer-with-order-by-keys: true
 artiexh:
   aws:
     s3:
