--- a/artiexh-api/pom.xml
+++ b/artiexh-api/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>moneta</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.12.539</version>
+		</dependency>
 	</dependencies>
 
 
