--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 charset = utf-8
 end_of_line = crlf
 
-[{*.java,*.xml}]
+[{*.java,*.xml,*.json}]
 indent_size = 4
 insert_final_newline = false
 tab_width = 4
