--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,12 +12,12 @@ jobs:
         uses: actions/setup-java@v3.12.0
         with:
           java-version: '17'
-          distribution: 'zulu'
+          distribution: 'liberica'
           cache: 'maven'
       - name: Build maven
         run: mvn -B install
       - name: Build docker image
-        run: mvn -B -pl artiexh-api spring-boot:build-image
+        run: docker build . --file .docker/Dockerfile --build-arg SOURCE_DIR=artiexh-api --tag public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
       - name: Setup AWS credential
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -27,9 +27,7 @@ jobs:
       - name: Login aws ecr
         run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/n8l9j6q1
       - name: Publish docker image
-        run: |
-          docker tag artiexh-api:1.0.0 public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
-          docker push public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
+        run: docker push public.ecr.aws/n8l9j6q1/artiexh-api:${{github.sha}}
   deploy:
     needs: build
     runs-on: ubuntu-latest
