--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-java@v3.12.0
         with:
           java-version: '17'
-          distribution: 'zulu'
+          distribution: 'liberica'
           cache: 'maven'
       - name: Build maven
         run: mvn -B install
