--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   servlet:
     multipart:
@@ -67,13 +66,13 @@ springdoc:
 artiexh:
   payment:
     vnp:
-      tmn-code: ${TMN_CODE:1IC4NLOV}
-      version: ${VNP_VERSION:2.1.0}
-      command: ${PAY:pay}
-      return-url: ${RETURN_URL:http://localhost:8081/api/v1/order/payment/vnpay-return}
-      url: ${VNP_URL:https://sandbox.vnpayment.vn/paymentv2/vpcpay.html}
-      secret-key: ${VNP_SECRET_KEY:ORMMOKOXKQPOISPOMVDFCJUQBJKRRIYJ}
-      fe-confirm-url: ${FE_CONFIRM_URL:http://localhost:9200/order-confirm}
+      tmn-code: ${TMN_CODE:}
+      version: ${VNP_VERSION:}
+      command: ${PAY:}
+      return-url: ${RETURN_URL:}
+      url: ${VNP_URL:}
+      secret-key: ${VNP_SECRET_KEY:}
+      fe-confirm-url: ${FE_CONFIRM_URL:}
   aws:
     s3:
       public-bucket-name: ${PUBLIC_BUCKET_NAME:}
