--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -93,6 +93,11 @@ artiexh:
         - http://localhost:3000/
       access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:}
       refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:}
+    cors:
+      allowed-origins: ${CORS_ALLOWED_ORIGINS:}
+      allowed-methods: ${CORS_ALLOWED_METHODS:}
+      allowed-headers: ${CORS_ALLOWED_HEADERS:}
+      allow-credentials: ${CORS_ALLOW_CREDENTIALS:}
     recent_oauth2_fail_id:
       expiration: ${CACHE_RECENT_OAUTH2_FAIL_ID_EXPIRE:}
   ghtk:
