--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -49,6 +49,9 @@ opensearch:
   username: ${OPENSEARCH_USERNAME:}
   password: ${OPENSEARCH_PASSWORD:}
 server:
+  tomcat:
+    threads:
+      max: 20
   error:
     include-message: always
     include-stacktrace: never
