--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+socket:
+  port: 8085
+  host: localhost
 spring:
   servlet:
     multipart:
@@ -105,5 +108,4 @@ artiexh:
     base-url: ${GHTK_BASE_URL:}
     token: ${GHTK_TOKEN:}
   notification:
-    client-url: ${CLIENT_URL:}
-    client-url-host: ${CLIENT_URL_HOST}
+
