--- a/artiexh-api/src/main/resources/application.yml
+++ b/artiexh-api/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 socket:
-  port: 8085
-  host: localhost
+  port: ${SOCKET_PORT:}
+  host: ${SOCKET_HOST:}
 spring:
   servlet:
     multipart:
@@ -107,5 +107,4 @@ artiexh:
   ghtk:
     base-url: ${GHTK_BASE_URL:}
     token: ${GHTK_TOKEN:}
-  notification:
 
